8300178: JDK-8288516 causes build failure on Windows + VS2010

Reviewed-by: andrew